// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionAware lifecyle should re-render the component on updates 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Width 
    4000
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Height 
    2000
  </Text>
</View>
`;

exports[`DimensionAware renders 1`] = `
<Component>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Width 
    750
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Height 
    1334
  </Text>
</Component>
`;
